v3 api - Manage Chat Notifications
